VSE: Crash when setting the filepath for large amount of strips via python #114342

Closed
opened 2023-10-31 21:15:25 +01:00 by Nick Alberelli · 7 comments

System Information
Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.125.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-31 14:46, hash: 0d861a93a662

Short description of error
When setting the file path for mulitple media strips in the VSE, Blender appears to have a memory leak, causing the system's memory to quickly fill up and in some cases blender will crash.

Exact steps for others to reproduce the error

  1. Open attached in attached ZIP VSE_Import_Bug.zip
  2. Run script in Blender, observe system memory (it will increase very quickly)
**System Information** Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.125.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-31 14:46, hash: `0d861a93a662` **Short description of error** When setting the file path for mulitple media strips in the VSE, Blender appears to have a memory leak, causing the system's memory to quickly fill up and in some cases blender will crash. **Exact steps for others to reproduce the error** 1. Open attached in attached ZIP [VSE_Import_Bug.zip](/attachments/42274204-786b-440b-9692-b7bf45741edf) 2. Run script in Blender, observe system memory (it will increase very quickly)
Nick Alberelli added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-31 21:15:26 +01:00
Member

Can confirm.

@ISS : is this expected behavior?

Can confirm. @ISS : is this expected behavior?

For the record, running the script on this file will claim 40+GB of RAM.

For the record, running the script on this file will claim 40+GB of RAM.
Member

Same thing happens when you do it in the UI, so if you click and accept here for many strips

image

Same thing happens when you do it in the UI, so if you click and accept here for many strips ![image](/attachments/7b124e20-1a04-49b4-9cdb-a469f4ec0bca)
4.9 KiB
Author
@mont29 ^

I would assume this may be out of memory situation, because ffmpeg buffers aren't freed. Will check how this works when adding strips and in general. Currently only strips intersecting cfra should keep ffmpeg stuff around.

I would assume this may be out of memory situation, because ffmpeg buffers aren't freed. Will check how this works when adding strips and in general. Currently only strips intersecting cfra should keep ffmpeg stuff around.

Thanks for looking into this! Before investigating further, please check with Bastien as he spent a bit of time on this as well.

Thanks for looking into this! Before investigating further, please check with Bastien as he spent a bit of time on this as well.

I would assume this may be out of memory situation, because ffmpeg buffers aren't freed.

That was also my conclusion from yesterday evening's investigations. Would never have considered freeing the whole anim data as a solution for this though!

Will check how this works when adding strips and in general. Currently only strips intersecting cfra should keep ffmpeg stuff around.

Proposed patch !114381 essentially LGTM.

> I would assume this may be out of memory situation, because ffmpeg buffers aren't freed. That was also my conclusion from yesterday evening's investigations. Would never have considered freeing the whole `anim` data as a solution for this though! > Will check how this works when adding strips and in general. Currently only strips intersecting cfra should keep ffmpeg stuff around. Proposed patch !114381 essentially LGTM.
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-11-03 02:01:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114342
No description provided.